# mtg-block-deck-builder

./: .gitignore  Dockerfile  README.md  docker-compose.yml
backend/: README.md  main.py  pyproject.toml
backend/app/: app.py
backend/app/api/: cards.py  sets.py
backend/app/api/types/: BaseSchema.py  Card.py  MtgSet.py  Set.py  StandardBlock.py
backend/app/db/: __init__.py
backend/scripts/add_out_of_standard_dates/: add_out_of_standard_dates.py  mtg_standard_set_rotations.csv
backend/scripts/add_pricing/: add_pricing.py
frontend/: package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.css  App.js  App.tsx
frontend/src/components/: MtgCardView.js  MtgCardView.tsx  SetSelectionModal.js  SetSelectionModal.tsx
frontend/src/icons/: IconRenderer.js  IconRenderer.tsx  icons.js  icons.tsx
frontend/src/types/: MtgCard.tsx  StandardBlock.tsx
frontend/src/utils/: url.js  url.tsx
