[project]
name = "mtg-block-deck-builder"
version = "0.1.0"
description = "Backend to supply a RESTful way to find mtg cards in a particular block"
readme = "../README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "psycopg2>=2.9.10",
    "tenacity>=9.1.2",
]

[dependency-groups]
dev = [
    "ruff>=0.11.11",
]

[tool.ruff]
line-length = 120
